--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,60 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* Global Styles */
+
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
+  text-align: left;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.875em;
+}
+
+h3,
+h4 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125em;
+  margin: 20px 0;
+}
+
+p {
+  font-size: 0.875em;
+  line-height: 1.3125em;
+}
+
+img {
+}
+
+figure {
+}
+
+address {
+  font-style: normal;
+}
+
 .content-wrapper {
   margin: 50px 0;
   width: 90%;
 }
+
 /* -------- Base Header and Footer Styles -------- */
 
 header,
@@ -358,7 +408,7 @@ aside {
    ========================================================================== */
 
 @media only screen and (min-width: 768px) {
-  /* General Styles */
+  /* Global Styles */
   .content-wrapper {
     margin: 100px 0;
     max-width: 640px;
@@ -485,7 +535,7 @@ aside {
 }
 
 @media only screen and (min-width: 1200px) {
-  /* General Styles */
+  /* Global Styles */
   .content-wrapper {
     max-width: 960px;
   }
