--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ html {
 }
 
 body {
+  color: #e2e3ed;
   font-family: "Open Sans", sans-serif;
   font-size: 1em;
   text-align: left;
@@ -112,6 +113,7 @@ a {
 h2 {
   font-family: "Poppins", sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
 }
 
 h3,
@@ -119,17 +121,12 @@ h4 {
   font-family: "Poppins", sans-serif;
   font-size: 1.125em;
   margin: 20px 0;
+  font-weight: 500;
 }
 
 p {
   font-size: 0.875em;
-  line-height: 1.3125em;
-}
-
-img {
-}
-
-figure {
+  line-height: 1.4375;
 }
 
 address {
@@ -146,6 +143,7 @@ address {
 header,
 footer {
   align-items: center;
+  background-color: #202322;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -164,6 +162,7 @@ header .content-wrapper {
 }
 
 .header-divider {
+  background: #3a3a3a;
   height: 1px;
   margin: 10px 0 20px 0;
   width: 100%;
@@ -173,7 +172,10 @@ header nav {
   align-items: center;
   display: flex;
   flex-flow: row wrap;
+  font-size: 1.125em;
+  font-weight: 700;
   justify-content: space-around;
+  text-transform: uppercase;
   width: 60%;
 }
 
@@ -183,8 +185,13 @@ header nav ul {
   width: 100%;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
 footer {
   flex-flow: column wrap;
+  text-align: center;
 }
 
 footer p {
@@ -220,18 +227,58 @@ footer .copyright {
 
 /* -------- Homepage -------- */
 
+/* Hero Area */
+
 .hero-area {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
 }
 
+.hero-area h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.25em;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+/* Aside */
+
 aside {
   align-items: center;
+  background-color: #527158;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
 }
+
+aside .form {
+  margin-top: 30px;
+}
+
+input[type="text"] {
+  box-sizing: border-box;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+  width: 100%;
+}
+
+input[type="button"] {
+  background-color: #2a423a;
+  border: none;
+  color: #e2e3ed;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125em;
+  font-weight: 500;
+  margin-top: 20px;
+  padding: 20px 0;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+/* Features */
 
 .features {
   display: flex;
@@ -257,9 +304,13 @@ aside {
 
 .features p {
   margin: 0;
+  text-align: center;
 }
 
+/* Reviews */
+
 .reviews {
+  background-color: #2a423a;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -267,6 +318,7 @@ aside {
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -278,6 +330,7 @@ aside {
 
 .mission {
   align-items: center;
+  background-color: #527158;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -285,6 +338,7 @@ aside {
 
 .contact-section {
   align-items: center;
+  background-color: #2a423a;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -298,6 +352,7 @@ aside {
 
 .faq {
   align-items: center;
+  background-color: #527158;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -313,10 +368,15 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height: 1.333;
 }
 
 /* ==========================================================================
@@ -414,10 +474,21 @@ aside {
     max-width: 640px;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
   /* Header */
+
   header {
     justify-content: space-around;
-    padding: 32px 0;
+    padding: 33px 0;
   }
 
   header .content-wrapper {
@@ -425,8 +496,12 @@ aside {
     width: 100%;
   }
 
+  header figure {
+    width: 30%;
+  }
+
   header nav {
-    width: 20%;
+    width: 40%;
   }
 
   header nav ul {
@@ -439,7 +514,14 @@ aside {
 
   /* Hero Area */
 
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
+
   /* Aside */
+
   aside .content-wrapper {
     display: flex;
     flex-flow: row wrap;
@@ -454,6 +536,11 @@ aside {
   }
 
   /* Features */
+
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features article {
     align-items: center;
     display: flex;
@@ -467,29 +554,49 @@ aside {
   }
 
   /* Reviews */
+
   .reviews article {
     display: flex;
     justify-content: space-between;
   }
 
+  .reveiws h2 {
+    width: 80%;
+  }
   .reviews article div {
     width: 50%;
   }
 
+  .reviews h3 {
+    margin: 0;
+    width: 50%;
+  }
+
   /* Footer */
+
   footer .content-wrapper {
     margin: 100px 0;
     width: 70%;
   }
 
-  .footer-content {
+  footer .footer-content {
     align-items: center;
     display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
   }
 
   footer .contact {
     margin-bottom: 0;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 50px;
+  }
+
+  footer p {
+    line-height: 1.285;
   }
 
   footer .copyright {
@@ -501,7 +608,7 @@ aside {
   .mission-content {
     align-items: center;
     display: flex;
-    justify-content: space-bewteen;
+    justify-content: space-between;
     padding-top: 20px;
   }
 
@@ -519,6 +626,10 @@ aside {
     justify-content: space-between;
   }
 
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
   /* -------- FAQ Page -------- */
 
   .faq .content-wrapper {
@@ -532,20 +643,47 @@ aside {
   .faq h2 {
     width: 100%;
   }
+
+  .faq h4,
+  .faq p {
+    font-size: 0.875em;
+    line-height: 1.125;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
   /* Global Styles */
+
+  header {
+    padding: 15px 0;
+  }
   .content-wrapper {
     max-width: 960px;
   }
 
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
   /* Hero */
+
   .hero-area h1 {
+    font-size: 3.75em;
     width: 65%;
   }
 
   /* Aside */
+
   aside .content-wrapper {
     justify-content: space-around;
   }
@@ -556,6 +694,7 @@ aside {
   }
 
   /* Features */
+
   .features h2 {
     width: 87%;
   }
@@ -565,21 +704,42 @@ aside {
   }
 
   /* Reviews */
+
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+
   .reviews article div {
     width: 50%;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
   }
 
   /* About Page */
 
   .mission h2,
   .contact-section .contact-wrapper h2 {
+    font-size: 3em;
     width: 90%;
+  }
+
+  .contact-content h4 {
+    font-size: 1.875em;
   }
 
   /* FAQ Page */
 
   .faq h2 {
+    font-size: 3em;
     width: 100%;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
   }
 }
 
