--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,14 @@ p {
   line-height: 1.4375;
 }
 
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
 address {
   font-style: normal;
 }
@@ -150,7 +158,7 @@ footer {
 }
 
 header {
-  padding: 17px 0;
+  padding: 18px 0;
 }
 
 header .content-wrapper {
@@ -159,6 +167,13 @@ header .content-wrapper {
   flex-flow: row wrap;
   justify-content: center;
   margin: 0;
+}
+header figure {
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 60%;
 }
 
 .header-divider {
@@ -176,7 +191,7 @@ header nav {
   font-weight: 700;
   justify-content: space-around;
   text-transform: uppercase;
-  width: 60%;
+  width: 90%;
 }
 
 header nav ul {
@@ -230,9 +245,12 @@ footer .copyright {
 /* Hero Area */
 
 .hero-area {
+  background: url("../img/jake-melara-30679-unsplash.jpg") center no-repeat;
+  background-size: cover;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -281,6 +299,8 @@ input[type="button"] {
 /* Features */
 
 .features {
+  background: url("../img/rawpixel-800820-unsplash1.jpg") center no-repeat;
+  background-size: cover;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -342,6 +362,7 @@ input[type="button"] {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  padding: 40px 20px;
 }
 
 .contact-content p {
@@ -363,7 +384,7 @@ input[type="button"] {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin-top: 50px;
+  margin: 50px 0 0 0;
 }
 
 .faq h2 {
@@ -514,6 +535,9 @@ input[type="button"] {
 
   /* Hero Area */
 
+  .hero-area {
+    min-height: 600px;
+  }
   .hero-area h1 {
     font-size: 3em;
     line-height: 1;
@@ -550,7 +574,7 @@ input[type="button"] {
   }
 
   .features .features-item-description {
-    width: 50%;
+    width: 60%;
   }
 
   /* Reviews */
@@ -563,6 +587,8 @@ input[type="button"] {
   .reveiws h2 {
     width: 80%;
   }
+
+  .reviews article figure,
   .reviews article div {
     width: 50%;
   }
@@ -691,6 +717,10 @@ input[type="button"] {
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
     width: 33%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /* Features */
