Add Google Map iframe code to About page and make it responsive

--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,22 @@ input[type="button"] {
   justify-content: center;
 }
 
+.map-container figure {
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 125%;
+  position: relative;
+  width: 100%;
+}
+
+.map-container iframe {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 .contact-section {
   align-items: center;
   background-color: #2a423a;
