--- a/css/main.css
+++ b/css/main.css
@@ -658,6 +658,10 @@ input[type="button"] {
     width: 45%;
   }
 
+  .map-container figure {
+    padding-bottom: 56.25%;
+  }
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
