--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,11 @@ input[type="button"] {
   width: 63%;
 }
 
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+}
+
 .features .features-items {
   align-items: center;
   display: flex;
